--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     
-
+Existem vários tipos de lixo, que podem ser classificados de acordo com sua origem, composição e destino. Os principais tipos são: lixo domiciliar, lixo comercial, lixo industrial, lixo hospitalar, lixo eletrônico, lixo radioativo, lixo agrícola e lixo espacial. Além disso, o lixo pode ser classificado como úmido (orgânico) ou seco (reciclável). 
+Lixo Domiciliar: É o lixo produzido nas residências, incluindo restos de alimentos, embalagens, papéis, plásticos, vidros, entre outros. 
+Lixo Comercial: É o lixo gerado por estabelecimentos comerciais, como lojas e supermercados. 
+Lixo Industrial: É o lixo produzido pelas indústrias, podendo conter materiais tóxicos e perigosos. 
+Lixo Hospitalar: É o lixo produzido por unidades de saúde, como hospitais e clínicas, e pode conter materiais contaminados e patógenos. 
+Lixo Eletrônico: É o lixo formado por equipamentos eletrônicos descartados, como celulares, computadores e eletrodomésticos. 
+Lixo Radioativo: É o lixo que contém materiais radioativos, como resíduos de usinas nucleares e hospitais que utilizam materiais radioativos. 
+Lixo Agrícola: É o lixo produzido em atividades agrícolas, como embalagens de agrotóxicos. 
+Lixo Espacial: É o lixo composto por objetos que não têm mais utilidade e estão em órbita da Terra, como restos de foguetes e satélites. 
+Lixo Orgânico (Úmido): É o lixo composto por materiais biodegradáveis, como restos de alimentos, cascas de frutas, folhas e outros materiais de origem vegetal ou animal. 
+Lixo Reciclável (Seco): É o lixo que pode ser reaproveitado, como papel, plástico, vidro e metais. 
+Outros Tipos de Lixo: Além dos tipos mencionados acima, existem outros tipos de lixo, como o lixo verde (folhas, galhos, etc.) e o lixo de construção civil (entulho). 
 
 
 
