--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>tipos de lixo</title>
 </head>
 <body>
-    <h1>Existem vários tipos de lixo</h1>
-<h3>Lixo Domiciliar: É o lixo produzido nas residências, incluindo restos de alimentos, embalagens, papéis, plásticos, vidros, entre outros. 
+    
+    <h1>Vários tipos de lixo</h1>
+Lixo Domiciliar: É o lixo produzido nas residências, incluindo restos de alimentos, embalagens, papéis, plásticos, vidros, entre outros. 
 Lixo Comercial: É o lixo gerado por estabelecimentos comerciais, como lojas e supermercados. 
 Lixo Industrial: É o lixo produzido pelas indústrias, podendo conter materiais tóxicos e perigosos. 
 Lixo Hospitalar: É o lixo produzido por unidades de saúde, como hospitais e clínicas, e pode conter materiais contaminados e patógenos. 
@@ -16,7 +17,7 @@ Lixo Radioativo: É o lixo que contém materiais radioativos, como resíduos de 
 Lixo Agrícola: É o lixo produzido em atividades agrícolas, como embalagens de agrotóxicos. 
 Lixo Espacial: É o lixo composto por objetos que não têm mais utilidade e estão em órbita da Terra, como restos de foguetes e satélites. 
 Lixo Orgânico (Úmido): É o lixo composto por materiais biodegradáveis, como restos de alimentos, cascas de frutas, folhas e outros materiais de origem vegetal ou animal. 
-Lixo Reciclável (Seco): É o lixo que pode ser reaproveitado, como papel, plástico, vidro e metais.</h3>
+Lixo Reciclável (Seco): É o lixo que pode ser reaproveitado, como papel, plástico, vidro e metais.
 
     
 
