--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tipos de lixo</title>
-</head>
+<link rel="stylesheet" href="style.css">
 <body>
     
     <h1>Vários tipos de lixo</h1>
